filters, edit profile, images, modal windows

--- a/src/app/components/booked-device/booked-device.component.html
+++ b/src/app/components/booked-device/booked-device.component.html
@@ -1,5 +1,5 @@
 <div class="item">
-  <img [src]="imgUrl"
+  <img [src]="API_URL + imgUrl"
        class="item_img"
   />
   <p style="line-height: 13px; font-weight: 700; color: #434854;">{{deviceName}}</p>
