--- a/src/app/components/dropdowns/dropdown-tag/dropdown-tag.component.html
+++ b/src/app/components/dropdowns/dropdown-tag/dropdown-tag.component.html
@@ -1,36 +1,17 @@
-<tui-hosted-dropdown
-  #dropdown
-  [tuiDropdownMaxHeight]="500"
-  [content]="content"
-  style="width: 100%; margin-bottom: 15px;"
+<tui-multi-select
+  tuiTextfieldSize="s"
+  *tuiLet="items$ | async as items"
+  style="margin-bottom: 15px;"
+  [formControl]="control"
+  [tuiTextfieldLabelOutside]="true"
+  [stringify]="(stringify$ | async)!"
+  (searchChange)="onSearch($event)"
 >
-  <button
-    style="width: 100%;"
-    tuiButton
-    size="s"
-    type="button"
-    [iconRight]="arrow"
-    [pseudoHover]="dropdown.open || null"
-  >Тег</button>
-</tui-hosted-dropdown>
-<ng-template #content>
-  <tui-data-list
-    style="width: 12rem"
-    size="m"
-  >
-    <tui-opt-group
-      tuiMultiSelectGroup
-      [(ngModel)]="value"
-    >
-      <tui-opt-group>
-        <button
-          *ngFor="let tag of tags"
-          tuiOption
-          [value]="tag"
-        >
-          {{ tag }}
-        </button>
-      </tui-opt-group>
-    </tui-opt-group>
-  </tui-data-list>
-</ng-template>
+  Тег
+  <tui-data-list-wrapper
+    *tuiDataList
+    tuiMultiSelectGroup
+    [items]="items"
+    [itemContent]="(stringify$ | async)!"
+  ></tui-data-list-wrapper>
+</tui-multi-select>
