--- a/src/app/components/modal-windows/modal-booking-card/modal-booking-card.component.html
+++ b/src/app/components/modal-windows/modal-booking-card/modal-booking-card.component.html
@@ -4,7 +4,7 @@
     *ngIf="device$ | async as device">
     <div class="container">
       <img class="container_img"
-           [src]="device.image">
+           [src]="API_URL + device.image">
     </div>
     <div class="container_spec">
       <p style="text-align: center; font-size: 15px; margin: 0; line-height: 20px;">{{device.name}}</p>
