--- a/src/app/components/modal-windows/modal-return-device/modal-return-device.component.html
+++ b/src/app/components/modal-windows/modal-return-device/modal-return-device.component.html
@@ -8,7 +8,7 @@
       appearance="green_outline"
       size="m"
       style="font-size: 15px; width: 40%;"
-      (click)="closeReturn()"
+      (click)="closeReturn(); reloadLocation()"
     >
       Ок
     </button>
