--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -4,7 +4,7 @@
       style="display: grid; grid-template-columns: 1fr 1fr; column-gap: 15px; justify-items: center; margin-bottom: 15px;">
       <div class="container">
         <img class="container_img"
-             src="https://www.meme-arsenal.com/memes/8e750b5ffb6a6d58cdb01341726ab3af.jpg">
+             [src]="API_URL + profileInfo.image">
       </div>
       <div class="container">
         <p style="text-align: center; color: #2E62D9;">ID</p>
