--- a/src/app/components/modal-windows/modal-usage-history/modal-usage-history.component.html
+++ b/src/app/components/modal-windows/modal-usage-history/modal-usage-history.component.html
@@ -1,26 +1,25 @@
 <div class="wrapper">
   <h3 style="text-align: center; font-size: 15px; margin: 0; line-height: 20px;">История использования</h3>
-  <h3 style="font-size: 12px;">20.10.2022</h3>
-  <p style="font-size: 12px;"><span>Никита Зернюков</span><span>15:00-17:00</span></p>
-  <p style="font-size: 12px;"><span>Михаил Абросимов</span><span>13:00-15:00</span></p>
-  <p style="font-size: 12px;"><span>Name Surname</span><span>HH:MM-HH:MM</span></p>
+  <div *ngIf="usageHistory$ | async as items">
+    <div *ngFor="let item of items">
+      <h3 style="font-size: 12px;">{{item.date}}</h3>
+      <p
+        style="font-size: 12px;"
+        *ngFor="let record of item.records"
+      ><span>{{record.userName}}</span><span>{{record.timeFrom}}-{{record.timeTo}}</span></p>
+    </div>
+  </div>
 
-  <h3 style="font-size: 12px;">DD.MM.YYYY</h3>
-  <p style="font-size: 12px;"><span>Name Surname</span><span>HH:MM-HH:MM</span></p>
-  <p style="font-size: 12px;"><span>Name Surname</span><span>HH:MM-HH:MM</span></p>
-  <p style="font-size: 12px;"><span>Name Surname</span><span>HH:MM-HH:MM</span></p>
-  <p style="font-size: 12px;"><span>Name Surname</span><span>HH:MM-HH:MM</span></p>
 
-
-  <button
-    tuiButton
-    type="button"
-    class="button"
-    size="m"
-    style="font-size: 15px; width: 100%; justify-content: center; align-self: center;"
-    appearance="red_outline"
-    (click)="closeUsageHistoryDialog()"
-  >
-    Назад
-  </button>
+<!--  <button-->
+<!--    tuiButton-->
+<!--    type="button"-->
+<!--    class="button"-->
+<!--    size="m"-->
+<!--    style="font-size: 15px; width: 100%; justify-content: center; align-self: center;"-->
+<!--    appearance="red_outline"-->
+<!--    (click)="closeUsageHistoryDialog()"-->
+<!--  >-->
+<!--    Назад-->
+<!--  </button>-->
 </div>
