--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -19,7 +19,11 @@
     appearance="white"
     (click)="onClick(content, 'm')"
   >
-    открыть
+    <tui-svg
+      style="color: #2E62D9"
+      src="tuiIconChevronDownLarge"
+      class="icon"
+    ></tui-svg>
   </button>
 </div>
 
