--- a/src/app/components/modal-windows/modal-cancel-reserve/modal-cancel-reserve.component.html
+++ b/src/app/components/modal-windows/modal-cancel-reserve/modal-cancel-reserve.component.html
@@ -7,7 +7,7 @@
       appearance="green_outline"
       size="m"
       style="font-size: 15px; width: 40%;"
-      (click)="closeCancelReserveDialog()"
+      (click)="closeCancelReserveDialog(); reloadLocation()"
     >
       Ок
     </button>
