--- a/src/app/components/modal-windows/modal-device-card/modal-device-card.component.html
+++ b/src/app/components/modal-windows/modal-device-card/modal-device-card.component.html
@@ -19,7 +19,7 @@
   <tui-input-tag
     tuiTextfieldSize="m"
     [uniqueTags]="false"
-    [(ngModel)]="value"
+    [(ngModel)]="tags"
     [tuiTextfieldLabelOutside]="true"
     [formControl]="control"
     style="width: 270px;"
