--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -53,4 +53,4 @@
     </form>
   </div>
 </div>
-<img src="../../../assets/logoline.png" style="position: fixed; bottom: 0;">
+<img src="../../../assets/logoline.png" style="position: fixed; bottom: 0">
