--- a/src/app/components/modal-windows/modal-success-booking/modal-success-booking.component.html
+++ b/src/app/components/modal-windows/modal-success-booking/modal-success-booking.component.html
@@ -8,7 +8,7 @@
       appearance="green_outline"
       size="m"
       style="font-size: 15px; width: 125px; margin-right: 15px;"
-      (click)="closeSuccessBookingDialog()"
+      (click)="closeSuccessBookingDialog(); reloadLocation()"
     >
       Ок
     </button>
