--- a/src/app/pages/edit-profile-page/edit-profile-page.component.html
+++ b/src/app/pages/edit-profile-page/edit-profile-page.component.html
@@ -13,7 +13,8 @@
   </div>
   <div>
     <input type="file" class="file-input"
-           (change)="onFileSelected($event)">
+           (change)="onFileSelected($event)"
+    >
   </div>
 
   <form
